add new constants and userloginController

--- a/EatTogether/Base.lproj/Main.storyboard
+++ b/EatTogether/Base.lproj/Main.storyboard
@@ -225,6 +225,24 @@
             </objects>
             <point key="canvasLocation" x="1940" y="2208"/>
         </scene>
+        <!--User Log In Controller-->
+        <scene sceneID="nY1-fk-dao">
+            <objects>
+                <viewController storyboardIdentifier="userLoginViewController" id="pPL-da-7GW" customClass="UserLogInController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="suV-bW-Rgj"/>
+                        <viewControllerLayoutGuide type="bottom" id="hBC-1M-TvD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="D2g-V9-uVC">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rWX-QP-cfn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1937" y="2887"/>
+        </scene>
         <!--Main View Controller-->
         <scene sceneID="dyX-zM-jOV">
             <objects>
